# Kagimori

./: .gitignore  Cargo.toml  Dockerfile  README.md  create-master-key.sh  deny.toml
.github/: dependabot.yml
.github/workflows/: build-container.yml  unit-test.yml
audit-log/: Cargo.toml
audit-log/src/: data.rs  lib.rs
audit-log/src/logger/: tracing.rs
ciphers/: Cargo.toml
ciphers/src/: aesgcmsiv.rs  chacha20poly1305.rs  error.rs  lib.rs  oneof.rs  rotatable.rs  test.rs
encryption/: Cargo.toml  build.rs
encryption/proto/: encryption-key.proto
encryption/src/: aesgcmsiv.rs  chacha20poly1305.rs  error.rs  identifier.rs  key.rs  lib.rs  proto.rs  test.rs
server/: Cargo.toml  build.rs
server/proto/: api.proto  kagimori.proto
server/src/: debug_log.rs  lib.rs
server/src/kagimori/: mod.rs
server/src/kms/: mod.rs
server/src/proto/: mod.rs
server/src/server/: h2c.rs  mod.rs  tls.rs  uds.rs
server/src/transit_stateless/: mod.rs
server/src/transit_stateless/apis/: byok_export_destination_source_version_get.rs  decrypt_name_post.rs  encrypt_name_post.rs  export_key_type_name_version_get.rs  hash_algorithm_post.rs  keys_get.rs  keys_name_config_post.rs  keys_name_delete.rs  keys_name_get.rs  keys_name_import_post.rs  keys_name_import_version_post.rs  keys_name_post.rs  keys_name_rotate_post.rs  mod.rs  random_source_bytes_post.rs  rewrap_name_post.rs  wrapping_key_get.rs
server/src/transit_stateless/headers/: mod.rs
src/: args.rs  main.rs  master_key.rs
storage/: Cargo.toml
storage/src/: compound.rs  error.rs  file.rs  lib.rs
storage/src/crypto/: mod.rs
storage/src/lowlevel/: compound.rs  etcd.rs  file.rs  mod.rs
test/kind/: cluster-config-patch.yaml  daemonset.yaml  delete-cluster.sh  encryption-config.yaml  kind-config.yaml  run-test.sh  start-cluster.sh  test-master-key.toml  test-master-key.yaml  test-secret.yaml
test/kind/encryption/: post.yaml  pre.yaml
