[workspace]
members = ["audit-log", "ciphers", "encryption", "server", "storage"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
ciphers = { path = "ciphers" }
storage = { path = "storage" }
encryption = { path = "encryption" }
server = { path = "server" }
audit-log = { path = "audit-log" }

# async
async-trait = "0.1.88"
tokio = "1.46.1"

# gRPC / protobuf
tonic = "0.13.1"
tonic-build = "0.13.1"

prost = "0.13.5" # locked by tonic
prost-build = "0.13.5" # locked by tonic-build

# encryption
chacha20poly1305 = "0.10.1"
aes-siv = "0.7.0"

# hashing
sha2 = "0.10.9"

# serde
serde = "1.0.219"
serde_json = "1.0.140"

# misc
uuid = "1.17.0"
chrono = "0.4.41"

# database
etcd-client = "0.16.1"

# error
thiserror = "2.0.12"

[package]
name = "kagimori"
version = "0.1.0"
edition.workspace = true

[dependencies]
ciphers.workspace = true
storage.workspace = true
encryption.workspace = true
server.workspace = true
