# Copyright 2025 SiLeader.
#
# This file is part of Kagimori.
#
# Kagimori is free software: you can redistribute it and/or modify it under the terms of
# the GNU General Public License as published by the Free Software Foundation,
# either version 3 of the License, or (at your option) any later version.
#
# Kagimori is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
# See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with Kagimori.
# If not, see <https://www.gnu.org/licenses/>.

[workspace]
members = ["audit-log", "ciphers", "encryption", "server"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
ciphers = { path = "ciphers" }
encryption = { path = "encryption" }
server = { path = "server" }
audit-log = { path = "audit-log" }

# async
async-trait = "0.1.88"
tokio = "1.47.1"
tokio-rustls = "0.26.2"

# gRPC / protobuf
tonic = "0.14.0"
tonic-prost-build = "0.14.0"
tonic-reflection = "0.14.0"
tonic-prost = "0.14.0"
prost = "0.14.1"

hyper = "1.6.0"
hyper-util = "0.1.16"

tower = "0.5.2"

# encryption
chacha20poly1305 = "0.10.1"
aes-siv = "0.7.0"

# serde
serde = "1.0.219"
serde_json = "1.0.142"
serde_yml = "0.0.12"

# misc
uuid = "1.17.0"
chrono = "0.4.41"
clap = "4.5.42"
base64 = "0.22.1"

# database
etcd-client = "0.16.1"

# error
thiserror = "2.0.12"

# log
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[package]
name = "kagimori"
version = "0.1.0"
edition.workspace = true

[dependencies]
ciphers.workspace = true
encryption.workspace = true
server = { workspace = true, features = ["reflection"] }
audit-log.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "std", "fmt", "json"] }

tokio = { workspace = true, features = ["full"] }

clap = { workspace = true, features = ["derive"] }

uuid = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_yml.workspace = true
base64.workspace = true
