[package]
name = "encryption"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait.workspace = true

# encryption
chacha20poly1305.workspace = true
aes-siv.workspace = true

# hashing
sha2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
