# Copyright 2025 SiLeader.
#
# This file is part of Kagimori.
#
# Kagimori is free software: you can redistribute it and/or modify it under the terms of
# the GNU General Public License as published by the Free Software Foundation,
# either version 3 of the License, or (at your option) any later version.
#
# Kagimori is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
# See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with Kagimori.
# If not, see <https://www.gnu.org/licenses/>.

[package]
name = "encryption"
version = "0.1.0"
edition.workspace = true

[dependencies]
ciphers.workspace = true
audit-log.workspace = true
chrono.workspace = true

uuid = { workspace = true, features = ["v4"] }
