# Copyright 2025 SiLeader.
#
# This file is part of Kagimori.
#
# Kagimori is free software: you can redistribute it and/or modify it under the terms of
# the GNU General Public License as published by the Free Software Foundation,
# either version 3 of the License, or (at your option) any later version.
#
# Kagimori is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
# See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with Kagimori.
# If not, see <https://www.gnu.org/licenses/>.

[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tonic = { workspace = true, features = ["tls-ring"] }
tonic-reflection = { workspace = true, optional = true }
tonic-prost.workspace = true
prost.workspace = true

encryption.workspace = true
audit-log.workspace = true
uuid = { workspace = true, features = ["v7"] }

tower.workspace = true

hyper.workspace = true
hyper-util.workspace = true

tokio = { workspace = true, features = ["full"] }
tokio-rustls.workspace = true

tracing.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[features]
reflection = ["dep:tonic-reflection"]
