[package]
name = "storage"
version = "0.1.0"
edition.workspace = true

[dependencies]
ciphers.workspace = true

async-trait.workspace = true

thiserror.workspace = true

tokio = { workspace = true, features = ["fs", "io-util"], optional = true }

etcd-client = { workspace = true, optional = true }

[features]
default = []

file = ["dep:tokio"]
etcd = ["dep:etcd-client"]

full = ["file", "etcd"]
